Settings menu now has an option to change the shoot key, more settings will be added.

--- a/settings.ini
+++ b/settings.ini
@@ -1,8 +1,9 @@
 [MOVEMENT]
-Forward = w
-Backward = s
-Left = a
-Right = d
+forward = w
+backward = s
+left = a
+right = d
 
 [SHOOT]
-Fire = " "
+shoot =  
+
